Correction of Wrong version

--- a/Dark Themes/Blackout/Sweetified YTM.css
+++ b/Dark Themes/Blackout/Sweetified YTM.css
@@ -4,9 +4,9 @@ html:not(.style-scope)
       
 /*===================Start of custom variables==============================*/           
       
-      --cust-ytmusic-play-nav-color: #161925;
+      --cust-ytmusic-play-nav-color: #1e2233;
       --cust-ytmusic-dark-background: #161925;
-      --cust-ytmusic-dark-foreground: #161925;
+      --cust-ytmusic-dark-foreground: #1e2233;
       
       --cust-ytmusic-light-text-1: #b20dbe;
       --cust-ytmusic-light-2: #9f0baa;
