changing color of playlistnames from ping to white

--- a/Dark Themes/Blackout/Sweetified YTM.css
+++ b/Dark Themes/Blackout/Sweetified YTM.css
@@ -25,7 +25,7 @@ html:not(.style-scope)
       --cust-ytmusic-playbutton-color: #b20dbe;
       --cust-ytmusic-tertiary-nav-button-color: #b20dbe;
         
-      --cust-ytmusic-main-text-1: #c50ed2;
+      --cust-ytmusic-main-text-1: #ffffff;
       --cust-ytmusic-header-text-1: #c50ed2;
       --cust-ytmusic-header-text-2: #c50ed2;
       
