--- a/Dark Themes/Blackout/Sweetified YTM.css
+++ b/Dark Themes/Blackout/Sweetified YTM.css
@@ -186,11 +186,11 @@ ytmusic-player-page
     }
     ytmusic-responsive-list-item-renderer
     {
-        background-color: var(--ytmusic-color-black1) !important
+        background-color: var(--ytmusic-cust-dark-background) !important
     }
     ytmusic-player-queue-item
     {
-        background-color: var(--ytmusic-color-black1) !important
+        background-color: var(--ytmusic-cust-dark-background) !important
     }   
   paper-tab.iron-selected.ytmusic-player-page  /*Up Next color*/
     {                                                                                           /*depriciated*/
